deployment/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: 675327529402.dkr.ecr.ap-southeast-1.amazonaws.com/hello-world:my-go-app
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 50m
            memory: 90Mi
          limits: 
            cpu: 50m
            memory: 90Mi
