deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec: 
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
